--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-.env   .env
+# Environment variables
+.env
+.env.local
+.env*.local
+
+# Python
+__pycache__/
+*.py[cod]
+venv/
+*.so
+
+# Next.js
+.next/
+node_modules/
+out/
+
+# Data
+data/chroma_db/
