--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,33 @@
+# Python virtual environment
+.venv/
+venv/
+ENV/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
 # Environment variables
 .env
 .env.local
-.env*.local
 
-# Python
-__pycache__/
-*.py[cod]
-venv/
-*.so
+# Node modules
+node_modules/
 
 # Next.js
 .next/
-node_modules/
 out/
 
-# Data
-data/chroma_db/
+# IDE files
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Chroma DB files
+**/chroma_db/
+*.sqlite3
+backend/data/
