--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,13 @@
 fastapi>=0.104.0
 uvicorn>=0.24.0
 langchain>=0.1.0
-langchain-openai>=0.0.2
 langchain-community>=0.0.10
-openai>=1.3.0
-python-dotenv>=1.0.0
+langchain-openai>=0.0.2
+sentence-transformers>=2.6.0
+langchain-huggingface>=0.0.6
+langchain-chroma>=0.0.5
 requests>=2.31.0
 chromadb>=0.4.18
 pydantic>=2.5.0
-typing-extensions>=4.8.0 
+python-dotenv>=1.0.0
+openai>=1.3.0 
